# thermostat

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hardware/: thermostat.kicad_pcb  thermostat.kicad_pro  thermostat.kicad_sch
html/: index.html
include/: i2c_scan.hpp  lwipopts.h  mbedtls_config.h  mbedtls_config_examples_common.h  peltier_driver.h  wifi.hpp  wifi_post.h  wifi_scan.hpp
include/menu/: button.h  lcd.h
include/sensors/: bme680.h  bme680_types.h  bmp280.h  ds18b20.h
src/: bme680.cpp  bmp280.cpp  button.cpp  ds18b20.cpp  lcd.cpp  peltier_driver.cpp
